key.core/src/test/resources/de/uka/ilkd/key/java/coverage/rejected/annotation-declaration/AnnDecl.java
public class AnnDecl {
    @interface Marker { int value() default 0; }
    @Marker(3) int x;
}
